@@ -4,10 +4,11 @@
 - New: Targeting Android 14
 - Improved: Changed that prices on the shopping list (extra fields) are now related to the selected
   quantity unit (instead of to the product's QU stock as before) (change from server version 4.0.1)
+- Improved: Tasks can now be sorted by category (#753)
 - Fixed: wrong title alignment in some list bottom sheets
 - Fixed: crash when product overview dialog is called when shopping lists feature is disabled
 - Fixed: Grouping option in shopping mode was not saved (#754)
-- Fixed: Chore details not opening (#749)
+- Fixed: Chore details not opening (#748)
 
 ## 3.3.0
 
